# xlayers

./: .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE  angular.json  bazel-out  package-lock.json  package.json  postinstall.tsconfig.json
.github/: main.workflow
src/: BUILD.bazel  main.dev.ts  main.prod.ts  main.ts  sketch.typings.ts  tsconfig.app.json  tsconfig.spec.json
src/app/: BUILD.bazel  app.module.ts
src/app/core/: BUILD.bazel  core.module.ts
src/app/core/state/: BUILD.bazel
src/app/editor/: BUILD.bazel
src/app/editor/code-editor/: BUILD.bazel
src/app/editor/code-editor/editor-container/: BUILD.bazel
src/app/editor/code-editor/editor-container/codegen/: BUILD.bazel  codegen.service.ts
src/app/editor/code-editor/editor-container/codegen/angular/: BUILD.bazel
src/app/editor/code-editor/editor-container/codegen/react/: BUILD.bazel
src/app/editor/code-editor/editor-container/codegen/vue/: BUILD.bazel
src/app/editor/code-editor/editor-container/codegen/wc/: BUILD.bazel
src/app/editor/exports/stackblitz/: BUILD.bazel
src/app/editor/layer-settings/: BUILD.bazel  ma_bite.sh
src/app/editor/viewer/lib/: sketch-layer.component.ts  sketch.module.ts
src/app/editor/viewer/lib/parsers/: bplist-parser.service.ts  sketch-style-parser.service.ts
src/app/home/: BUILD.bazel
src/app/home/interactive-bg/: BUILD.bazel  interactive-bg.component.ts
src/app/home/landing/: BUILD.bazel
src/assets/: BUILD.bazel
src/assets/codegen/: BUILD.bazel
src/assets/contributions/Centigrade-GmbH/: BUILD.bazel
src/assets/demos/sketchapp/49/: BUILD.bazel
src/assets/demos/sketchapp/50/: BUILD.bazel
src/assets/icons/: BUILD.bazel
src/environments/: BUILD.bazel
