load("@build_bazel_rules_typescript//:defs.bzl", "ts_library")

package(default_visibility = ["//visibility:public"])

ts_library(
    name = "environments",
    srcs = [
        "environment.dev.ts",
        "environment.prod.ts",
        "environment.ts",
    ],
    deps = [
        "@npm//@types",
    ]
)
