load("@angular//:index.bzl", "ng_module")

package(default_visibility = ["//visibility:public"])

ng_module(
    name = "core",
    srcs = [
        "core.module.ts"
    ] + glob([
        "state/*.ts"
    ]),
    tsconfig = "//src:tsconfig-app",
    deps = [
        # "@angular//cdk/scrolling",
        "@angular//packages/common",
        "@angular//packages/core",
        "@angular//packages/forms",
        "@angular_material//src/lib/button",
        "@angular_material//src/lib/button-toggle",
        "@angular_material//src/lib/card",
        "@angular_material//src/lib/expansion",
        "@angular_material//src/lib/icon",
        "@angular_material//src/lib/input",
        "@angular_material//src/lib/list",
        "@angular_material//src/lib/menu",
        "@angular_material//src/lib/select",
        "@angular_material//src/lib/sidenav",
        "@angular_material//src/lib/slide-toggle",
        "@angular_material//src/lib/slider",
        "@angular_material//src/lib/snack-bar",
        "@angular_material//src/lib/tabs",
        "@angular_material//src/lib/toolbar",
        "@angular_material//src/lib/tooltip",
        "@angular_material//src/lib/tree",
        # "@angular//cdk/drag-drop",
        "@npm//ngx-color",
        "@npm//@bugsnag/js",
        "@npm//@bugsnag/plugin-angular",
    ],
)
