load("@angular//:index.bzl", "ng_module")

package(default_visibility = ["//visibility:public"])

ng_module(
    name = "core",
    srcs = [
        "core.module.ts"
    ] + glob([
        "state/*.ts"
    ]),
    tsconfig = "//src:tsconfig-app",
    deps = [
        # "@angular//cdk/scrolling",
        "@angular//packages/common",
        "@angular//packages/core",
        "@angular//packages/forms",
        "@angular_material//src/lib:material",
        # "@angular//cdk/drag-drop",
        "@npm//ngx-color",
        "@npm//@bugsnag/js",
        "@npm//@bugsnag/plugin-angular",
    ],
)
