load("@angular//:index.bzl", "ng_module")

package(default_visibility = ["//visibility:public"])

ng_module(
    name = "editor",
    srcs = [
        "editor.component.ts",
        "editor.module.ts",
    ],
    assets = [
      "editor.component.css",
      "editor.component.html",
    ],
    tsconfig = "//src:tsconfig-app",
    deps = [  
      "//src/app/core:core",
      # "//src/app/core/state/page.state",
      # "//src/app/core/state/ui.state",
      "//src/app/editor/code-editor:code-editor",
      "//src/app/editor/layer-settings:layer-settings",
      "@angular//packages/core",
      "@angular//packages/router",
      "@npm//@ngxs/devtools-plugin",
      "@npm//@ngxs/logger-plugin",
      "@npm//@ngxs/store",
    ],
)

