load("@angular//:index.bzl", "ng_module")

package(default_visibility = ["//visibility:public"])

ng_module(
    name = "home",
    srcs = [
        "home.module.ts",
    ],
    tsconfig = "://src:tsconfig-app",
    deps = [
        "//landing/landing.component"
        "//interactive-bg/interactive-bg.component"
        "@angular//pakages/router"
        "@angular//pakages/core"
        "@angular//pakages/common"
    ],
)

