load("@angular//:index.bzl", "ng_module")

package(default_visibility = ["//visibility:public"])

ng_module(
    name = "home",
    srcs = [
        "home.module.ts",
    ],
    tsconfig = "//src:tsconfig-app",
    deps = [
        "//src/app/home/landing:landing",
        "//src/app/home/interactive-bg:interactive-bg",
        "@angular//packages/router",
        "@angular//packages/core",
        "@angular//packages/common",
    ],
)

