package(default_visibility = ["//visibility:public"])

filegroup(
    name = "default_filegroup",
    srcs = [
      "icon-128x128.png",
      "icon-144x144.png",
      "icon-152x152.png",
      "icon-192x192.png",
      "icon-384x384.png",
      "icon-512x512.png",
      "icon-72x72.png",
      "icon-96x96.png",
    ],
)
