load("@build_bazel_rules_typescript//:defs.bzl", "ts_library")

package(default_visibility = ["//visibility:public"])

ts_library(
    name = "ts_default_library",
    srcs = [
        "//src/app/editor/code-editor/editor-container/codegen",
        "//src/app/editor/viewer/lib/sketch.service",
        "@angular_material//src/lib/snack-bar",
        "@npm//:@ngxs/store",
        "@npm//:@ngxs/store",
    ],
)
