load("@angular//:index.bzl", "ng_module")

package(default_visibility = ["//visibility:public"])

ng_module(
    name = "ng_default_library",
    srcs = [
        "code-editor.module.ts",
    ],
    tsconfig = ":tsconfig.app.json",
    deps = [
        "//src/app/core/core.module",
        "//src/app/editor/code-editor/editor-container",
        "//src/app/editor/code-editor/editor-container/codegen",
        "@angular//packages/core",
        "@npm//:ngx-highlightjs",
    ],
)
