load("@angular//:index.bzl", "ng_module")

package(default_visibility = ["//visibility:public"])

ng_module(
    name = "ng_default_library",
    srcs = [
        "editor.component.ts",
        "editor.module.ts",
    ],
    assets = [
        "editor.component.css",
        "editor.component.html",
    ],
    tsconfig = ":tsconfig.app.json",
    deps = [
        "//src/app/core",
        "//src/app/editor/layer-settings/settings-container",
        "//src/app/editor/layer-settings/settings-layer-colors",
        "//src/app/editor/layer-settings/settings-layer-position",
        "//src/app/editor/layer-settings/settings-layer-properties",
        "//src/app/editor/layer-settings/settings-preview",
        "@angular//packages/core",
    ],
)

