load("@angular//:index.bzl", "ng_module")

package(default_visibility = ["//visibility:public"])

ng_module(
    name = "ng_default_library",
    srcs = [
        "interactive-bg.component.ts",
    ],
    assets = [
      "interactive-bg.component.css",
      "interactive-bg.component.html",
    ],
    tsconfig = ":tsconfig.app.json",
    deps = [
        "@angular//packages/core",
    ],
)

