load("@angular//:index.bzl", "ng_module")

package(default_visibility = ["//visibility:public"])

ng_module(
    name = "interactive-bg",
    srcs = [
        "interactive-bg.component.ts",
    ],
    assets = [
      "interactive-bg.component.css",
      "interactive-bg.component.html",
    ],
    tsconfig = "//src:tsconfig-app",
    deps = [
        "@angular//packages/core",
        "@npm//@types",
    ],
)

