load("@angular//:index.bzl", "ng_module")

package(default_visibility = ["//visibility:public"])

ng_module(
    name = "ng_default_library",
    srcs = [
        "landing.component.ts",
    ],
    assets = [
      "landing.component.css",
      "landing.component.html",
    ],
    tsconfig = ":tsconfig.app.json",
    deps = [
        "//src/environments",
        "@angular//packages/core",
    ],
)

