load("@angular//:index.bzl", "ng_module")

package(default_visibility = ["//visibility:public"])

ng_module(
    name = "landing",
    srcs = [
        "landing.component.ts",
    ],
    assets = [
      "landing.component.css",
      "landing.component.html",
    ],
    tsconfig = "//src:tsconfig-app",
    deps = [
        "//src/environments:environments",
        "@angular//packages/core",
        "@npm//@types",
    ],
)

