load("@angular//:index.bzl", "ng_module")

package(default_visibility = ["//visibility:public"])

ng_module(
    name = "ng_default_library",
    srcs = [
      "editor-container.component.ts",
    ],
    tsconfig = ":tsconfig.app.json",
    deps = [
        "//src/app/core/state/page.state",
        "//src/app/editor/code-editor/editor-container/codegen/codegen.service",
        "@angular//packages/core",
        "@npm//@ngxs/store",
    ],
)
