package(default_visibility = ["//visibility:public"])

filegroup(
    name = default_filegroup",
    srcs = [
        "md-components-buttons-fabs-light.sketch",
        "md-components-buttons-lights.sketch",
        "md-components-cards-homes.sketch",
        "md-components-cards-pooch.sketch",
        "md-components-cards-safari.sketch",
        "md-components-cards-welcome-back.sketch",
        "md-components-chips-open-chip.sketch",
        "md-components-date-picker.sketch",
        "md-components-notifications-heads-up.sketch",
        "md-components-tabs-status-bar.sketch",
    ],
)
