load("@angular//:index.bzl", "ng_module")

package(default_visibility = ["//visibility:public"])

ng_module(
    name = "codegen",
    srcs = glob([
        "**/*.ts",
    ], exclude = [
        "**/*.spec.ts"
    ]),
    tsconfig = "//src:tsconfig-app",
    deps = [
        "@angular//packages/core",
    ],
)
